--- a/src/extension/tutorial.html
+++ b/src/extension/tutorial.html
@@ -4,15 +4,19 @@
 <style>
 body {
 	margin: 0 auto;
-	max-width: 960px;
+	max-width: 800px;
 	padding: 1em;
-	font-size: 1em;
+	font-size: 1.2em;
 	font-family: sans-serif;
+	line-height: 1.7em;
+}
+table img {
+	vertical-align: middle;
 }
 </style>
 <html>
 <body>
-	<markdown src="README.md">
+	<markdown src="docs/TUTORIAL.md">
 	</markdown>
 </body>
 </html>
