Detect and adjust for dark mode in tutorial

--- a/src/extension/tutorial.html
+++ b/src/extension/tutorial.html
@@ -13,6 +13,14 @@ body {
 table img {
 	vertical-align: middle;
 }
+
+@media (prefers-color-scheme: dark) {
+    body, img {
+        background-color: #1a1a1a;
+				filter: invert();
+    }
+}
+
 </style>
 <html>
 <body>
