Detect dark mode in preferences and tutorial

--- a/src/extension/preferences.html
+++ b/src/extension/preferences.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <title>Preferences</title>
 <link rel="stylesheet" href="preferences.css">
+<link rel="stylesheet" href="invert-on-dark.css">
 
 <html>
 <body></body>
