--- a/src/extension/tutorial.html
+++ b/src/extension/tutorial.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>Online Chess Enhancement Suite tutorial</title>
+<link rel="stylesheet" href="invert-on-dark.css" />
 <style>
 body {
 	margin: 0 auto;
@@ -13,14 +14,6 @@ body {
 table img {
 	vertical-align: middle;
 }
-
-@media (prefers-color-scheme: dark) {
-    body, img {
-        background-color: #1a1a1a;
-				filter: invert();
-    }
-}
-
 </style>
 <html>
 <body>
