--- a/src/extension/sites/preferences/preferences.html
+++ b/src/extension/sites/preferences/preferences.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>Preferences</title>
 <link rel="stylesheet" href="preferences.css">
-<link rel="stylesheet" href="invert-on-dark.css">
+<link rel="stylesheet" href="../common/invert-on-dark.css">
 
 <html>
 <body></body>
